# NeKoRoGEAR

./: CMakeLists.txt  LICENSE.md  README.md
assets/models/: Miku.fbx
assets/scenes/: dev_map.json
assets/shaders/: basic.frag  basic.vert
src/Core/: EntryPoint.h
src/Core/Assets/: AssetManager.h  Model.h  ModelLoader.h
src/Core/Components/: Application.cpp  Application.h  DebugMenu.cpp  InputCodes.h  InputManager.cpp  InputManager.h  Scene.h  SceneSerializer.cpp  SceneSerializer.h
src/Core/ECS/: ECS.h
src/Core/ECS/Components/: Camera.h  Renderable.h  Tag.h
src/Core/ECS/Systems/: CameraControllerSystem.h  CameraSystem.h  RenderSystem.h  TransformSystem.h
src/Core/Events/: Events.h
src/Core/Rendering/: Buffer.cpp  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.h  Window.cpp  Window.h
src/Core/Rendering/OpenGL/: OpenGLBuffer.h  OpenGLRenderCommand.cpp  OpenGLTexture.cpp
src/Editor/: Editor.cpp
src/Engine/: main.cpp
src/Engine/Assets/: AssetManager.h  Model.h  ModelLoader.h
src/Engine/Components/: Application.cpp  Application.h  DebugMenu.cpp  DebugMenu.h
src/Engine/ECS/: ECS.h
src/Engine/ECS/Components/: Renderable.h  Transform.h
src/Engine/ECS/Systems/: CameraControllerSystem.h  CameraSystem.h  RenderSystem.h  TransformSystem.h
src/Engine/Events/: EventBus.h  Events.h
src/Engine/Rendering/: Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/Engine/Rendering/OpenGL/: OpenGLBuffer.cpp  OpenGLTexture.cpp
src/Runtime/: Runtime.cpp
